<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            style="@style/Text.DocShare.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_account" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            style="@style/Text.DocShare.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_documents" />

        <TextView
            style="@style/Text.DocShare.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_premium" />

        <TextView
            style="@style/Text.DocShare.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_settings" />

        <TextView
            style="@style/Text.DocShare.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_logout" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

