<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            style="@style/Text.DocShare.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.DocShare.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Text.DocShare.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_profile" />

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.DocShare.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Text.DocShare.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_privacy" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

